# AutoPlay

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Phigros/: AutoPlay.cpp  AutoPlay.h  LevelControl.cpp  LevelControl.h  Message.h  OtherPlay.cpp  OtherPlay.h  Phigros.cpp  Phigros.h
Phigros/Mem/: All.hpp  Array.hpp  DataRef.hpp  DefIl2Offset.hpp  Il2cppCall.hpp  Il2cppClass.hpp  Il2cppStruct.hpp  Mem.hpp  Reader.hpp
Phigros/Touch/: Event.cpp  ThreadPool.cpp  ThreadPool.h  Touch.cpp  Touch.h
lua/: FindIl2ClassArrayOffset.lua
